--- a/es.5
+++ b/es.5
@@ -36,7 +36,7 @@ int main(int argc, char *argv[])
 		}
   d = a + b;
 
-	} while (d == c);
+	} while (d <= c);
 
 	printf("\nnulli: %d\n", nulli);
 	printf("pari: %d\n", pari);
